test_suite/ui/invalid_attribute_syntax.stderr
error: expected `|`
 --> ui/invalid_attribute_syntax.rs:6:24
  |
6 | #[bitflags(default = A + B)]
  |                        ^

error: unexpected end of input, expected identifier
  --> ui/invalid_attribute_syntax.rs:12:1
   |
12 | #[bitflags(default = A |)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected identifier
  --> ui/invalid_attribute_syntax.rs:18:1
   |
18 | #[bitflags(default =)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `=`
  --> ui/invalid_attribute_syntax.rs:24:1
   |
24 | #[bitflags(default)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `default`
  --> ui/invalid_attribute_syntax.rs:30:12
   |
30 | #[bitflags(yes)]
   |            ^^^
